--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raffael | dev</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/icon-port.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,8 +34,8 @@
 
         <section id="about-section">
             <div id="about-box">
-                <img src="img/thaua.png" alt="Raffael's Profile Picture">
-                <div id="about-content">
+                <img src="img/thaua.png" alt="Raffael's Profile Picture" data-anima="left">
+                <div id="about-content" data-anima="right">
                     <h2>About Me</h2>
                     <hr>
                     <p> Hi! I'm Raffael Thauã, a passionate web developer dedicated to building efficient and innovative
