--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <section id="about-section">
             <div id="about-box">
-                <img src="img/thaua.png" alt="Raffael's Profile Picture" data-anima="left">
+                <img src="img/thaua.jpg" alt="Raffael's Profile Picture" data-anima="left">
                 <div id="about-content" data-anima="right">
                     <h2>About Me</h2>
                     <hr>
@@ -82,16 +82,6 @@
                     <li>Python</li>
                     <li>Git & GitHub</li>
 
-                    <li>JavaScript</li>
-                    <li>HTML & CSS</li>
-                    <li>React.js</li>
-                    <li>Vue.js</li>
-                    <li>Angular.js</li>
-                    <li>Node.js</li>
-                    <li>Tailwind</li>
-                    <li>Python</li>
-                    <li>Git & GitHub</li>
-
                 </ul>
             </div>
         </section>
@@ -101,10 +91,9 @@
             <div id="projects-box"></div>
 
             <div id="pages">
-                <button id="prev">
-                    < </button>
-                        <div id="page-numbers"></div>
-                        <button id="next">></button>
+                <button id="prev"><</button>
+                <div id="page-numbers"></div>
+                <button id="next">></button>
             </div>
         </section>
 
