--- a/index.html
+++ b/index.html
@@ -62,26 +62,25 @@
             <div id="skills-box" translate="no">
                 <h2>Soft Skills</h2>
                 <ul>
-                    <li>JavaScript</li>
-                    <li>HTML & CSS</li>
-                    <li>React.js</li>
-                    <li>Vue.js</li>
-                    <li>Angular.js</li>
-                    <li>Node.js</li>
-                    <li>Tailwind</li>
-                    <li>Python</li>
-                    <li>Git & GitHub</li>
+                    <li style="--this-bg-color: #f7df1e; --this-text-color: #111111">JavaScript</li>
+                    <li style="--this-bg-color: #e34c26; --this-text-color: #ffffff">HTML & CSS</li>
+                    <li style="--this-bg-color: #106aa7; --this-text-color: #61dafb">React.js</li>
+                    <li style="--this-bg-color: #42b883; --this-text-color: #35495e">Vue.js</li>
+                    <li style="--this-bg-color: #dd1b16; --this-text-color: #ffffff">Angular.js</li>
+                    <li style="--this-bg-color: #68a063; --this-text-color: #ffffff">Node.js</li>
+                    <li style="--this-bg-color: #38bdf8; --this-text-color: #0f172a">Tailwind</li>
+                    <li style="--this-bg-color: #3776ab; --this-text-color: #ffd43b">Python</li>
+                    <li style="--this-bg-color: #e32c26; --this-text-color: #ffffff">Git & GitHub</li>
 
-                    <li>JavaScript</li>
-                    <li>HTML & CSS</li>
-                    <li>React.js</li>
-                    <li>Vue.js</li>
-                    <li>Angular.js</li>
-                    <li>Node.js</li>
-                    <li>Tailwind</li>
-                    <li>Python</li>
-                    <li>Git & GitHub</li>
-
+                    <li style="--this-bg-color: #f7df1e; --this-text-color: #111111">JavaScript</li>
+                    <li style="--this-bg-color: #e34c26; --this-text-color: #ffffff">HTML & CSS</li>
+                    <li style="--this-bg-color: #106aa7; --this-text-color: #61dafb">React.js</li>
+                    <li style="--this-bg-color: #42b883; --this-text-color: #35495e">Vue.js</li>
+                    <li style="--this-bg-color: #dd1b16; --this-text-color: #ffffff">Angular.js</li>
+                    <li style="--this-bg-color: #68a063; --this-text-color: #ffffff">Node.js</li>
+                    <li style="--this-bg-color: #38bdf8; --this-text-color: #0f172a">Tailwind</li>
+                    <li style="--this-bg-color: #3776ab; --this-text-color: #ffd43b">Python</li>
+                    <li style="--this-bg-color: #e32c26; --this-text-color: #ffffff">Git & GitHub</li>
                 </ul>
             </div>
         </section>
@@ -91,9 +90,10 @@
             <div id="projects-box"></div>
 
             <div id="pages">
-                <button id="prev"><</button>
-                <div id="page-numbers"></div>
-                <button id="next">></button>
+                <button id="prev">
+                    < </button>
+                        <div id="page-numbers"></div>
+                        <button id="next">></button>
             </div>
         </section>
 
