gsap animations and skill
add gsap animations and gsap card skill

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- Importando ScrollTrigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -34,8 +38,8 @@
 
         <section id="about-section">
             <div id="about-box">
-                <img src="img/thaua.jpg" alt="Raffael's Profile Picture" data-anima="left">
-                <div id="about-content" data-anima="right">
+                <img src="img/thaua.jpg" alt="Raffael's Profile Picture" id="img-profile">
+                <div id="about-content">
                     <h2>About Me</h2>
                     <hr>
                     <p> Hi! I'm Raffael Thauã, a passionate web developer dedicated to building efficient and innovative
@@ -71,6 +75,7 @@
                     <li style="--this-bg-color: #38bdf8; --this-text-color: #0f172a">Tailwind</li>
                     <li style="--this-bg-color: #3776ab; --this-text-color: #ffd43b">Python</li>
                     <li style="--this-bg-color: #e32c26; --this-text-color: #ffffff">Git & GitHub</li>
+                    <li style="--this-bg-color: #0ae448; --this-text-color: #111111">Gsap</li>
 
                     <li style="--this-bg-color: #f7df1e; --this-text-color: #111111">JavaScript</li>
                     <li style="--this-bg-color: #e34c26; --this-text-color: #ffffff">HTML & CSS</li>
@@ -81,6 +86,8 @@
                     <li style="--this-bg-color: #38bdf8; --this-text-color: #0f172a">Tailwind</li>
                     <li style="--this-bg-color: #3776ab; --this-text-color: #ffd43b">Python</li>
                     <li style="--this-bg-color: #e32c26; --this-text-color: #ffffff">Git & GitHub</li>
+                    <li style="--this-bg-color: #0ae448; --this-text-color: #111111">Gsap</li>
+
                 </ul>
             </div>
         </section>
