Fix HTML formatting and add missing elements

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
          <div id="social-links">
             <a href="https://www.instagram.com/th23_dev?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-               target="_blank"><img src="/img/insta.webp" alt="My Instagram"></a>
+               target="_blank"><img src="img/insta.webp" alt="My Instagram"></a>
 
             <a href="https://www.linkedin.com/in/raffael-thau%C3%A3-da-silva-lima-ab697a344/" target="_blank"><img
-                  src="/img/linkedin.webp" alt="My linkdin"></a>
+                  src="img/linkedin.webp" alt="My linkdin"></a>
 
-            <a href="https://wa.me/5591984750946" target="_blank"><img src="/img/zapp.webp" alt="My WhatsApp"></a>
+            <a href="https://wa.me/5591984750946" target="_blank"><img src="img/zapp.webp" alt="My WhatsApp"></a>
          </div>
       </section>
 
@@ -113,5 +113,6 @@
    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
 
    <script src="script.js"></script>
+
 
 </html>
