Update Projects system
add thumbnails system and new projects

--- a/index.html
+++ b/index.html
@@ -37,24 +37,17 @@
             <div id="about-content">
                <h2>About Me</h2>
                <hr>
-               <p> Hi! I'm Raffael Thauã, a passionate web developer dedicated to building efficient and innovative
-                  digital solutions. With a strong foundation in technologies like JavaScript, HTML, CSS, and
-                  modern frameworks such as React, Vue.js, and Tailwind, I specialize in transforming complex
-                  ideas
-                  into clean, user-friendly web experiences. <br>
-
-                  My journey in tech is driven by curiosity and a constant desire to grow. I love exploring new
-                  tools, contributing to open-source projects, and tackling challenges that require both
-                  creativity and precision. <br>
-
-                  When I’m not coding, you’ll find me diving into emerging technologies, refining my skills, or
-                  enjoying immersive gaming sessions. Let’s connect and create something amazing on the web!</p>
+               <p> I’m <strong>Raffael Thauã</strong>, a web developer passionate about creating efficient and
+                  innovative digital solutions. I work with <strong>JavaScript, HTML, CSS</strong> and modern
+                  frameworks like <strong>React, Vue.js, and Tailwind</strong>, turning ideas into simple and
+                  user-friendly experiences. <br><br> I enjoy learning new tools, contributing to open-source
+                  projects, and exploring emerging technologies. Outside of coding, I love gaming and discovering new
+                  trends in tech. </p>
                <h2>Education</h2>
                <hr>
-               <p>I'm currently pursuing a degree in Information Systems at UFPA, where I'm in my second semester.
-                  Alongside my academic journey, I’ve developed a strong and comprehensive skill set in web
-                  development, working with technologies like HTML, CSS, JavaScript, React, Vue.js, and Node.js to
-                  build modern, responsive, and user-focused web applications.</p>
+               <p> I’m currently studying <strong>Information Systems at UFPA</strong> (2nd semester). Alongside
+                  myacademic journey, I’ve built strong skills in <strong>HTML, CSS, JavaScript, React, Vue.js,and
+                     Node.js</strong>, developing modern, responsive, and user-focused web applications. </p>
             </div>
          </div>
 
