--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="https://github.com/THaua23" target="_blank"><img src="img/github-icon.webp" alt="github"
                   id="github-icon"></a>
          </div>
+         <img src="img/arrow.webp" id="arrow">
       </section>
 
       <section id="about-section">
